# FCGF

./: pyproject.toml
lib/: data_loaders.py  trainer.py
model/: resunet.py  simpleunet.py
src/fcgf/lib/: data_loaders.py  eval.py  trainer.py
src/fcgf/model/: __init__.py
src/fcgf/util/: pointcloud.py
util/: pointcloud.py
