[tool.poetry]
name = "fcgf"
version = "0.1.0"
description = ""
authors = ["Chris Choy <chrischoy@ai.stanford.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
torch = "^1.12.1"
open3d = "^0.16.0"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
